# SkiffUI

./: .gitignore  CODE_OF_CONDUCT.md  CREDITS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SUB-LICENSES.md  Security.md  app.py  data.skf  docker_state.skf  helmtest.py  requirements.txt  setup.bat  setup.sh  srcselectednodeID.cache
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  rust.yml
OpenImageIO/: LICENSE.md  README.md  SECURITY.md
app/: package-lock.json  package.json  services.sh  webpack.config.js
app/backend/: app.py  edges.json  nodes.json
app/public/: index.html  manifest.json
app/src/: ButtonEdge.js  Homepage.js  Network.js  RenderGraph.js  Utils.js  button_edge.css  graph.css  homepage.css  index.css  index.js
example projects/: docker_state.skf  my_network.skf  my_network2.skf
src/: 40c0e31bc4c6.py  cache  docker_cache.json  docker_state.skf  helmdata.json  main.py  main.rs  requirements.txt
src/gimelstudio/: application.py  config.py  constants.py  node_importer.py
src/gimelstudio/api/: __init__.py
src/gimelstudio/core/: __init__.py  (+11 more)
src/gsnodegraph/: PKG-INFO  container_runner.py
src/image_cache/: cache.json
src/nodes/: ContainerFromNodeID.py  containerEditor.py  container_generator.py  custom_node_template.py  docker_container_register.py  docker_image_node_template.py  docker_node_template.py  docker_state_tracker.py  node_generator.py  nodescript_template.py  state_tracker.py
src/shiphelm/: __init__.py  main.py  setup.py
templates/: index.html
(+74 files in other folders)
