[package]
name = "SkiffUI-Rust-Edition"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.15"
docker = "0.0.41"
egui = "0.20.1"
tokio = { version = "1.15.0", features = ["full"] }
